import java.util.List;

public class Atuendo {
  public List<Prenda> prendasDelAtuendo;
  public void AgregarPrenda(Prenda unaNuevaPrenda){
    this.prendasDelAtuendo.add(unaNuevaPrenda);
  }

}
