public enum Categoria {
  PARTE_SUPERIOR,CALZADO,PARTE_INFERIOR,ACCESORIOS
}
