public interface Provincia {
  Integer temperaturaActual();

}
