public enum Tramas {
  LISA,RAYADA,CON_LUNARES,A_CUADROS,ESTAMPADO
}
